--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html>
 <head>
-  <title>올라푸</title>
+  <title>고세연의웹사이트</title>
   <meta charset="utf-8">
 </head>
 <body>
-<a href="index.html"><h1><strong>올라푸</strong></h1></a>
+<a href="index.html"><h1><strong>고세연의웹사이트</strong></h1></a>
 <ol>
   <a href="1.html"><li>HTML</li></a>
   <a href="2.html"><li>CSS</li></a>
   <a href="3.html"><li>Javascript</li></a>
 </ol>
 
-이제 <u><strong>공부</strong></u>를 하려 합니다.<br>
+김민성 공부좀 하자<br>
 <p style="font-size:22px;">2020년 1월 7일에 시작했습니다.</p>
 <p style="margin-top:45px;">웹사이트를 만들고 싶습니다.</p>
 <img src="snowman.jpg" height="20%" width="20%">
