--- a/2.html
+++ b/2.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html>
 <head>
-  <title>고세연의웹사이트</title>
+  <title>올라푸의웹사이트</title>
   <meta charset="utf-8">
 </head>
 <body>
-  CSS 시작합니다.<br>
-  <a href="index.html">메인으로 돌아가기</a>
+<a href="index.html"><h1><strong>올라푸</strong></h1></a>
+<ol>
+  <li>How I met your mather: 영어공부용으로 보기 시작했는데 너무 재밌네요ㅋㅋ<br>
+  <a href="https://en.wikipedia.org/wiki/How_I_Met_Your_Mother"target="_blank"><img src="How I Met Your Mother.jpg"></a>
+</ol>
 </body>
 </html>
