--- a/1.html
+++ b/1.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html>
 <head>
-  <title>고세연의웹사이트</title>
+  <title>올라푸의웹사이트</title>
   <meta charset="utf-8">
 </head>
 <body>
-  HTML 시작합니다.<br>
-  <a href="index.html">메인으로 돌아가기</a>
+<a href="index.html"><h1><strong>올라푸</strong></h1></a>
+<ol>
+<li>Psycho_Red Velvet
+</ol>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/uR8Mrt1IpXg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
