--- a/2.html
+++ b/2.html
@@ -1,14 +1,43 @@
 <!doctype html>
 <html>
 <head>
-  <title>올라푸의웹사이트</title>
+  <title>올라푸의 웹사이트</title>
   <meta charset="utf-8">
 </head>
+<style>
+  body{
+    margin: 0px;
+  }
+  a{
+    color: black;
+  }
+  h1{
+    font-size:50px;
+    text-align: center;
+    border-bottom: 5px solid gray;
+    margin: 0px;
+    padding: 20px;
+
+  }
+  .no_underline{
+    text-decoration: none;
+  }
+  ol{
+    border-right: 3px solid gray;
+    width:150px;
+    margin: 0px;
+    padding: 30px;
+  }
+</style>
 <body>
-<a href="index.html"><h1><strong>올라푸</strong></h1></a>
-<ol>
+  <h1><a href="index.html" class="no_underline">올라푸</a></h1>
+  <ol>
+    <li><a href="1.html" class="no_underline">좋아하는 노래</a></li>
+    <li><a href="2.html" class="no_underline"style="color:red">좋아하는 드라마</a></li>
+  </ol>
+  <ol>
   <li>How I met your mather: 영어공부용으로 보기 시작했는데 너무 재밌네요ㅋㅋ<br>
   <a href="https://en.wikipedia.org/wiki/How_I_Met_Your_Mother"target="_blank"><img src="How I Met Your Mother.jpg"></a>
-</ol>
+  </ol>
 </body>
 </html>
