--- a/index.html
+++ b/index.html
@@ -45,7 +45,27 @@
       <li><a href="2.html" class="no_underline">좋아하는 드라마</a></li>
     </ol>
   </div>
-  <div><img class="maincontent" src="startup.jpg" height="100px" width="200px"></div>
+  <div>
+    <img class="maincontent" src="startup.jpg" height="100px" width="200px">
+    <p class="maincontent">
+      <strong>발자국</strong><br>
+<br>
+바닷가 모래밭에서<br>
+외줄기 발자국을 본다.<br>
+<br>
+문득<br>
+무언가 하나<br>
+남기고 싶어진다.<br>
+<br>
+바람이 지나고<br>
+물결이 스쳐<br>
+모든 흔적이 사라져도<br>
+<br>
+자그만<br>
+발자국을 남기고 싶다.<br>
+(박두순·시인, 1950-)<br>
+      </p>
+    </div>
   </div>
   <a href="https://opentutorials.org/course/1" target="_blank" title="생활코딩">생활코딩 바로가기</a>
   <p style="font-size:10px;">2020년 1월 7일에 시작했습니다.</p>
