--- a/1.html
+++ b/1.html
@@ -4,40 +4,22 @@
   <title>올라푸의 웹사이트</title>
   <meta charset="utf-8">
 </head>
-<style>
-  body{
-    margin: 0px;
-  }
-  a{
-    color: black;
-  }
-  h1{
-    font-size:50px;
-    text-align: center;
-    border-bottom: 5px solid gray;
-    margin: 0px;
-    padding: 20px;
-
-  }
-  .no_underline{
-    text-decoration: none;
-  }
-  ol{
-    border-right: 3px solid gray;
-    width:150px;
-    margin: 0px;
-    padding: 30px;
-  }
-</style>
+<link rel="stylesheet" href="style.css">
 <body>
   <h1><a href="index.html" class="no_underline">올라푸</a></h1>
-  <ol>
+  <div id="grid">
+  <div class="mainlist">
+    <ol>
     <li><a href="1.html" class="no_underline" style="color:red">좋아하는 노래</a></li>
     <li><a href="2.html" class="no_underline">좋아하는 드라마</a></li>
-  </ol>
-  <ol>
-    <li>Psycho_Red Velvet
-  </ol>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/uR8Mrt1IpXg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </ol>
+  </div>
+  <div class="maincontent">
+    <ol>
+      <li>Psycho_Red Velvet
+    </ol>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/uR8Mrt1IpXg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  </div>
 </body>
 </html>
