--- a/index.html
+++ b/index.html
@@ -1,47 +1,41 @@
 <!doctype html>
 <html>
+
 <head>
   <title>올라푸의 웹사이트</title>
   <meta charset="utf-8">
 </head>
-<style>
-  body{
-    margin: 0px;
-  }
-  a{
-    color: black;
-  }
-  h1{
-    font-size:50px;
-    text-align: center;
-    border-bottom: 5px solid gray;
-    margin: 0px;
-    padding: 20px;
-
-  }
-  .no_underline{
-    text-decoration: none;
-  }
-  #grid{
-    display: grid;
-    grid-template-columns: 1fr 5fr;
-  }
-  #grid .mainlist{
-  border-right: 3px solid gray;
-  margin: 0px;
-  }
-  #grid .maincontent{
-    padding: 10px;
-  }
-  @media(max-width:1000px){
-    #grid{
-      display: block;
-    }
-
-  }
-</style>
+<link rel="stylesheet" href="style.css">
 <body>
   <h1><a href="index.html" class="no_underline">올라푸</a></h1>
+  <script>
+  function nightHandler(self){
+      var target=document.querySelector('body');
+      var alist=document.querySelectorAll('a');
+      var i=0;
+      if(this.value==='야간모드'){
+        target.style.backgroundColor='black';
+        target.style.color='white';
+        while(i<alist.length){
+          alist[i].style.color='white';
+          i+=1;
+        }
+        this.value='주간모드';
+        }
+      else{
+        target.style.backgroundColor='white';
+        target.style.color='black';
+        while(i<alist.length){
+          alist[i].style.color='black';
+          i+=1;
+        }
+        this.value='야간모드';
+        }
+
+  };
+</script>
+    <input id="night" type="button" value="야간모드" onclick="
+    nightHandler(this)">
   <div id="grid">
   <div class="mainlist">
     <ol>
@@ -74,4 +68,5 @@
   <a href="https://opentutorials.org/course/1" target="_blank" title="생활코딩">생활코딩 바로가기</a>
   <p style="font-size:10px;">2020년 1월 7일에 시작했습니다.</p>
 </body>
+</script>
 </html>
