--- a/1.html
+++ b/1.html
@@ -10,15 +10,15 @@
   <div id="grid">
   <div class="mainlist">
     <ol>
-    <li><a href="1.html" class="no_underline" style="color:red">좋아하는 노래</a></li>
+    <li><a href="1.html" class="no_underline" style="color:red">안 좋아하는 노래</a></li>
     <li><a href="2.html" class="no_underline">좋아하는 드라마</a></li>
     </ol>
   </div>
   <div class="maincontent">
     <ol>
-      <li>Psycho_Red Velvet
+      <li>울릉도 트위스트라는 곡
     </ol>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/uR8Mrt1IpXg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/JVwSNkBMyR8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   </div>
 </body>
