--- a/2.html
+++ b/2.html
@@ -10,7 +10,7 @@
   <div id="grid">
   <div class="mainlist">
     <ol>
-      <li><a href="1.html" class="no_underline">좋아하는 노래</a></li>
+      <li><a href="1.html" class="no_underline">안 좋아하는 노래</a></li>
       <li><a href="2.html" class="no_underline"style="color:red">좋아하는 드라마</a></li>
     </ol>
     </div>
