--- a/2.html
+++ b/2.html
@@ -5,8 +5,10 @@
   <meta charset="utf-8">
 </head>
 <link rel="stylesheet" href="style.css">
+<script src="color.js"></script>
 <body>
   <h1><a href="index.html" class="no_underline">올라푸</a></h1>
+  <input id="night" type="button" value="야간모드" onclick="nightHandler(this)">
   <div id="grid">
   <div class="mainlist">
     <ol>
