사이트 리뉴얼

--- a/2.html
+++ b/2.html
@@ -1,26 +1,30 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
-  <title>올라푸의 웹사이트</title>
+  <title>고세연의 웹사이트</title>
   <meta charset="utf-8">
 </head>
 <link rel="stylesheet" href="style.css">
 <script src="color.js"></script>
 <body>
-  <h1><a href="index.html" class="no_underline">올라푸</a></h1>
+  <h1><a href="index.html" class="no_underline">고세연</a></h1>
   <input id="night" type="button" value="야간모드" onclick="nightHandler(this)">
   <div id="grid">
   <div class="mainlist">
     <ol>
-      <li><a href="1.html" class="no_underline">안 좋아하는 노래</a></li>
+      <li><a href="1.html" class="no_underline">좋아하는 노래</a></li>
       <li><a href="2.html" class="no_underline"style="color:red">좋아하는 드라마</a></li>
     </ol>
     </div>
   <div class="maincontent">
-    <ol>
-      <li>How I met your mather: 영어공부용으로 보기 시작했는데 너무 재밌네요ㅋㅋ<br>
-      <a href="https://en.wikipedia.org/wiki/How_I_Met_Your_Mother"target="_blank"><img src="How I Met Your Mother.jpg"></a>
-    </ol>
+      <ol>
+          <li>
+              Breaking Bad<br>
+              <a href="https://youtu.be/Xs6_vecSv2Y" target="_blank"><img src="breakingbad.jpg"></a>
+          <li>
+              How I met your mather<br>
+              <a href="https://en.wikipedia.org/wiki/How_I_Met_Your_Mother" target="_blank"><img src="How I Met Your Mother.jpg"></a>
+      </ol>
   </div>
   </div>
 </body>
