--- a/1.html
+++ b/1.html
@@ -1,26 +1,26 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
-  <title>올라푸의 웹사이트</title>
+  <title>고세연의 웹사이트</title>
   <meta charset="utf-8">
 </head>
 <link rel="stylesheet" href="style.css">
 <script src="color.js"></script>
 <body>
-  <h1><a href="index.html" class="no_underline">올라푸</a></h1>
+  <h1><a href="index.html" class="no_underline">고세연</a></h1>
   <input id="night" type="button" value="야간모드" onclick="nightHandler(this)">
   <div id="grid">
   <div class="mainlist">
     <ol>
-    <li><a href="1.html" class="no_underline" style="color:red">안 좋아하는 노래</a></li>
+    <li><a href="1.html" class="no_underline" style="color:red">좋아하는 노래</a></li>
     <li><a href="2.html" class="no_underline">좋아하는 드라마</a></li>
     </ol>
   </div>
   <div class="maincontent">
     <ol>
-      <li>울릉도 트위스트라는 곡
-    </ol>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/JVwSNkBMyR8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <li>Nike Shoes (Feat. Dynamic Duo)
+</ol>
+    <iframe width="560" height="315" src="https://youtu.be/X1qi8DrPfcs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   </div>
 </body>
