--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 ﻿<!doctype html>
 <html>
 <head>
-  <title>올라푸의 웹사이트</title>
+  <title>고세연의 웹사이트</title>
   <meta charset="utf-8">
 </head>
 <link rel="stylesheet" href="style.css">
 <script src="color.js"></script>
 
 <body>
-  <h1><a href="index.html" class="no_underline">올라푸</a></h1>
+  <h1><a href="index.html" class="no_underline">고세연</a></h1>
   <input id="night" type="button" value="야간모드" onclick="nightHandler(this)">
   <div id="grid">
   <div class="mainlist">
     <ol>
-      <li><a href="1.html" class="no_underline">안 좋아하는 노래</a></li>
+      <li><a href="1.html" class="no_underline">좋아하는 노래</a></li>
       <li><a href="2.html" class="no_underline">좋아하는 드라마</a></li>
     </ol>
   </div>
@@ -22,8 +22,8 @@
     <p>
       <strong>안녕하세요</strong><br>
 <br>
-와주셔서 ㄳ합니다<br>
-방가방가<br>
+어떻게 왔누<br>
+ㅎㅇㅎㅇ<br>
 
       </p>
     </div>
