--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
     </ol>
   </div>
   <div class="maincontent">
-    <img src="startup.jpg" height="100px" width="200px">
+    <img src="startup.jpg" height="300px" width="2000px">
     <p>
       <strong>안녕하세요</strong><br>
 <br>
-어떻게 왔누<br>
-ㅎㅇㅎㅇ<br>
+안녕하세요!<br>
+좋은 하루 되세요!<br>
 
       </p>
     </div>
   </div>
   <a href="https://opentutorials.org/course/1" target="_blank" title="생활코딩">생활코딩 바로가기</a>
-  <p style="font-size:10px;">언제 또 하냐 </p>
+  <p style="font-size:10px;">to be continue.. </p>
 </body>
 </script>
 </html>
