--- a/2.html
+++ b/2.html
@@ -1,31 +1,19 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 <head>
-  <title>고세연의 웹사이트</title>
+  <title>WEB1 - CSS</title>
   <meta charset="utf-8">
 </head>
-<link rel="stylesheet" href="style.css">
-<script src="color.js"></script>
 <body>
-  <h1><a href="index.html" class="no_underline">고세연</a></h1>
-  <input id="night" type="button" value="야간모드" onclick="nightHandler(this)">
-  <div id="grid">
-  <div class="mainlist">
-    <ol>
-      <li><a href="1.html" class="no_underline">좋아하는 노래</a></li>
-      <li><a href="2.html" class="no_underline"style="color:red">좋아하는 드라마</a></li>
-    </ol>
-    </div>
-  <div class="maincontent">
-      <ol>
-          <li>
-              Breaking Bad<br>
-              <a href="https://youtu.be/Xs6_vecSv2Y" target="_blank"><img src="breakingbad.jpg"></a>
-          <li>
-              How I met your mather<br>
-              <a href="https://en.wikipedia.org/wiki/How_I_Met_Your_Mother" target="_blank"><img src="How I Met Your Mother.jpg"></a>
-      </ol>
-  </div>
-  </div>
+  <h1><a href="index.html">WEB</a></h1>
+  <ol>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
+  </ol>
+  <h2>CSS</h2>
+  <p>
+    Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language. Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.
+  </p>
 </body>
 </html>
