--- a/index.html
+++ b/index.html
@@ -1,35 +1,18 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 <head>
-  <title>고세연의 웹사이트</title>
+  <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
 </head>
-<link rel="stylesheet" href="style.css">
-<script src="color.js"></script>
-
 <body>
-  <h1><a href="index.html" class="no_underline">고세연</a></h1>
-  <input id="night" type="button" value="야간모드" onclick="nightHandler(this)">
-  <div id="grid">
-  <div class="mainlist">
-    <ol>
-      <li><a href="1.html" class="no_underline">좋아하는 노래</a></li>
-      <li><a href="2.html" class="no_underline">좋아하는 드라마</a></li>
-    </ol>
-  </div>
-  <div class="maincontent">
-    <img src="startup.jpg" height="200px" width="400px">
-    <p>
-      <strong>안녕하세요</strong><br>
-<br>
-안녕하세요!<br>
-좋은 하루 되세요!<br>
-
-      </p>
-    </div>
-  </div>
-  <a href="https://opentutorials.org/course/1" target="_blank" title="생활코딩">생활코딩 바로가기</a>
-  <p style="font-size:10px;">to be continue.. </p>
+  <h1><a href="index.html">WEB</a></h1>
+  <ol>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
+  </ol>
+  <h2>WEB</h2>
+  <p>The World Wide Web (abbreviated WWW or the Web) is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and can be accessed via the Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.[2][3] The Web browser was released outside of CERN in 1991, first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.
+  </p>
 </body>
-</script>
 </html>
